MB-56675: streamEnd must not use the return value from removeStream

removeStream can return a nullptr - but streamEnd already has the
PassiveStream, so we can remove the assignment and use the existing
pointer.

Change-Id: I8c04af18e5b5d2e3c37fc406591712b7d4283b02
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/190297
Well-Formed: Restriction Checker
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>