engines/ep/src/dcp/consumer.cc
@@ -445,7 +445,8 @@ cb::engine_errc DcpConsumer::streamEnd(uint32_t opaque,
     if (res == cb::engine_errc::success) {
         // Stream End message successfully passed to stream. Can now remove
         // the stream from the streams map as it has completed its lifetime.
-        auto stream = removeStream(vbucket);
+        removeStream(vbucket);
+
         // Note we are potentially racing with the consumer buffering task
         // which may call setDead, so we don't call setDead here (that could be
         // state transition violation/exception), hence we just move out the
